style.css
/* custom font */
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

:root {
    --primary-color: #d024ff;
    --secondary-color: #00c89c;
    --border: #ff9efc 1px solid;
    --bs-white: #fff;
}
body {
    background-color: #0e0019 !important;
    font-family: "Poppins", serif !important;

}
::-webkit-scrollbar{
    display: none;
}
a{
    text-decoration: none !important;
}

header {
    min-height: 100vh;
    /* background-color: aqua; */
}

/* navbar */
.navbar {
    box-shadow: 0px 2px 5px #ffffff2a;
    width: 100% !important;
}

.logoIcon {
    width: 50px;
    height: 50px;
}

.nav-link {
    position: relative;

    text-decoration: none;

    background-color: #333;
    color: white !important;
}

.navbar-toggler {
    outline: none !important;
}

.navbar a {
    text-decoration: none;
}

.navbar .nav-link:hover {
    color: #fb00ff !important;
}

/* dropdown */
.dropdown-menu {
    background-color: transparent !important;
    box-shadow: 1px 1px 5px #c800ff;
}

.dropdown-item>a {
    color: rgb(255, 255, 255) !important;
}

.dropdown-item:hover {
    background-color: #e600ff !important;
}

/* heropage */

.heroPage {

    margin-top: 100px;

}

.welcome {
    color: #fff;
}

.name {
    color: var(--primary-color);
    text-shadow: 0px 0px px #ff98fc;
}

.socialIcons {
    margin-bottom: 10px;
}

.socialIcons span {
    padding: 10px;


}

.card {
    background-color: transparent !important;
    border: #ff9efc 1px solid !important;
}

.resumeBtn {
    background-color: #bb00dc !important;
    color: #fff !important;
}

.contactBtn {
    border: 1px solid #d900ff !important;
    color: #fb00ff !important;
    transition: 0.5s;
}

.contactBtn:hover {
    background-color: #d900ff !important;
    color: #fff !important;
}

/* tool tips */

.custom-tooltip {
    --bs-tooltip-bg: #d900ff !important;
    --bs-tooltip-color: var(--bs-white);
}


/* Education time line */

.experienceTimeLine {
    position: relative;
    max-width: 1200px;
    margin: 80px auto;
}

.experienceTimeLine::after {
    content: "";
    position: absolute;
    width: 5px;
    height: 100%;
    border-radius: 10px;
    background-color: rgb(78, 0, 97);
    top: 0;
    left: 50%;
    margin-left: -3px;
    z-index: -1;
    animation: moveline 7.5s linear forwards;
}

@keyframes moveline {
    0% {
        height: 0;
    }

    100% {
        height: 100%;
    }

}

.timeLineContainer {
    padding: 10px 40px;
    position: relative;
    width: 50%;
    /* border: 1px solid var(--primary-color) !important; */
    border-radius: 10px;
    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px !important;
    animation: movedown 1s linear forwards;
    opacity: 0;
}

.timeLineContainer:nth-child(1) {
    animation-delay: 0s;
}


.timeLineContainer:nth-child(2) {
    animation-delay: 2s;
}

.timeLineContainer:nth-child(3) {
    animation-delay: 3s;
}

.timeLineContainer:nth-child(4) {
    animation-delay: 4.5s;
}

.timeLineContainer:nth-child(5){
    animation-delay: 5s;
}
.timeLineContainer:nth-child(6){
    animation-delay: 6s;
}

@keyframes movedown {
    0% {
        opacity: 1;
        transform: translateY(-30px);
    }

    100% {
        opacity: 1;
        transform: translateY(30px);
    }
}

.text-box {
    padding: 20px 30px;
    background-color: #f9bdff;
    position: relative;
    border-radius: 6px;
    font-size: 15px !important;
}

.text-box h4 {
    font-weight: 700;
}

.text-box small {
    display: inline-block;
}

.left-container-arrow {
    position: absolute;
    height: 0;
    width: 0;
    top: 15px;
    z-index: 1;
    border-top: 15px solid transparent;
    border-bottom: 15px solid transparent;
    border-left: 15px solid #f9bdff;
    right: -13px;
}

.right-container-arrow {
    position: absolute;
    height: 0;
    width: 0;
    top: 15px;
    z-index: 1;
    border-top: 15px solid transparent;
    border-bottom: 15px solid transparent;
    border-right: 15px solid #f9bdff;
    left: -13px;
}

.circle-left {
    width: 30px;
    height: 30px;
    background-color: #ff78f8 !important;
    position: absolute;
    z-index: 10;
    border-radius: 50%;
    right: -15px;
    top: 20px;
}

.circle-left::after {

    content: "";
    position: absolute;
    width: 20px;
    height: 20px;
    background-color: #ff00d9;
    border-radius: 50%;
    transform: translate(-50%, -50%);
    top: 50%;
    left: 50%;

}

.circle-right {
    width: 30px;
    height: 30px;
    background-color: #ff78f8 !important;
    position: absolute;
    z-index: 10;
    border-radius: 50%;
    left: -15px;
    top: 20px;
}

.circle-right::after {
    content: "";
    position: absolute;
    width: 20px;
    height: 20px;
    background-color: #ff00d9;
    border-radius: 50%;
    transform: translate(-50%, -50%);
    top: 50%;
    left: 50%;

}


.left-container {
    left: 0;
}

.right-container {
    left: 50%;
}

/* Research Profile*/
.researchProfileContainer {
    margin-top: 200px;

}

.researchHeading {
    color: var(--primary-color);
    font-weight: bold;
    position: relative;
    display: inline-block;
    /* padding: 1px; */
}

.researchHeading::after {
    content: "";
    position: absolute;

    background-color: #00c89c;
    bottom: -5px;
    right: 0;
    left: 1%;
    border-radius: 10px;
    width: 45%;
    height: 5px;
}

.card-footer {
    border-top: none !important;
}


/* Awards and Recognitions */
.awardsList{
    list-style-type:none ;
    padding: 0px;   
}

.awardsList > li{
    position: relative;
    padding-left: 40px;
    margin: 10px auto;
    color: #fff;
}

.awardsList > li::before{
    content: "";
    position: absolute;
    left: 0;
    top: 5px;
    width: 20px;
    height: 20px;
    background-size: cover;
    background-repeat: no-repeat;
    background-image: url(/skportfolio/src/trophy-star.png);
}

/* Research Area */
.researchArea{
    list-style-type: none ;
    padding: 0px;
}

.researchArea > li{
    padding-left: 40px;
    position: relative;
    margin: 10px auto;
}

.researchArea > li::before{
    content: "";
    position: absolute;
    width: 25px;
    height: 25px;
    background-image: url(/skportfolio/src/market-analysis.png);
    top: 0;
    left: 0;
    background-repeat: no-repeat;
    background-size: cover;
}
/* selectedJournals */

.selectedJournals{
    list-style-type: none;
    padding: 0px;
}
.selectedJournals >li{
    margin: 15px auto;
    padding-left: 40px;
    position: relative;
}
.selectedJournals >li::before{
    content: "";
    position: absolute;
    background-image: url(/skportfolio/src/diary.png);
    left: 0;
    top: 5px;
    width: 25px;
    height: 25px;
    background-size: cover;
    background-repeat: no-repeat;
}

/* patentDetails */
.patentDetails{
    list-style-type: none ;
    padding: 0px;
}
.patentDetails >li{
    position: relative;
    padding-left: 40px;
    margin: 15px auto;

}

.patentDetails > li::before{
    content: "";
    position: absolute;
    width: 25px;
    height: 25px;
    background-image: url(/skportfolio/src/certificate.png);
    top: 0;
    left: 0;
    background-repeat: no-repeat;
    background-size: cover;
}


/* researchProjects */
.researchProjects{
    list-style-type: none;
    padding: 0px;
}

.researchProjects > li{
    margin: 15px auto;
    position: relative;
    padding-left: 40px;
}


.researchProjects > li::before{
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    width: 25px;
    height: 25px;
    background-image: url(/skportfolio/src/idea.png);
    background-size: cover;
    background-repeat: no-repeat;
}



/* preloader */
.preloader{
    background: #070707 url(https://cdn.dribbble.com/users/2689687/screenshots/7064797/media/8ddd20e96e8baca19c35d86f500d017b.gif) no-repeat center center;
    background-size: 20%;
    height: 100vh;
    width: 100%;
    position: fixed;
    z-index: 100000;
}

.loading-text{
    position: absolute;
    top: 61%;
    left: 50%;
    transform: translate(-50%,-50%);
    
}

/* Foooter */

footer{
    margin-top: 300px;
    background-color: #eaa6ff;
    padding: 30px;
    min-height: 40vh;
}
footer ul>li>a{
    color: #000;
}
footer ul>li>a:hover{
    color: #fff;
}



/* Media queries */

@media screen and (max-width : 600px) {
    .experienceTimeLine {
        margin: 50px auto;
    }

    .experienceTimeLine::after {
        left: 31px;
    }

    .timeLineContainer {
        width: 100%;
        padding-left: 60px;
    }

    .text-box {
        font-size: 10px !important;
        /* padding: 10px; */
    }

    .text-box small {
        margin-bottom: 10px;
    }

    .right-container {
        left: 0;
    }

    .left-container .circle-left,
    .right-container .circle-right {
        left: 15px;
    }

    .left-container-arrow {
        border-right: 15px solid #f9bdff;
        border-left: 0;
        left: -13px;
        z-index: 1;
    }
    .loading-text{
        top: 55%;
        left: 50%;
        transform: translate(-50%,-50%);
    }
}

